[build-system]
requires = [
  "setuptools>=61",
  "pytest"
]
build-backend = "setuptools.build_meta"

[project]
name = "pico-crypto-key"
version = "1.4.3"
authors = [
  { name="Andrew Smith", email="andrew@friarswood.net" },
]
license = {file = "LICENSE.md"}
description = "Raspberry Pi pico cryptography key and python driver"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: linux",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++ :: 20",
  "Programming Language :: C :: 17"
]
dependencies = [
  "pyusb>=1.3.1",
  "pwinput>=1.0.3",
  "typer>=0.17.4",
  "fastapi[standard]>=0.116.0",
  "requests>=2.32.3",
  "pandas",
  "ecdsa>=0.19.0"
]

[project.scripts]
picobuild = "pico_crypto_key.build:app"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "mypy>=1.18.0",
  "mypy-extensions>=1.0.0",
  "ruff>=0.13.0",
  "types-requests>=2.32.4.20250913",
]

[project.urls]
"Homepage" = "https://github.com/virgesmith/pico-crypto-key"

[tool.pytest.ini_options]
testpaths = [
  "test"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "S", "SIM", "UP"]
ignore = ["S101", "S113", "S603", "S607"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]

[tool.mypy]
exclude = [
  "mbedtls",
  "build-*",
]