[build-system]
requires = [
  "setuptools>=82",
  "pytest"
]
build-backend = "setuptools.build_meta"

[project]
name = "pico-crypto-key"
version = "1.4.4"
authors = [
  { name="Andrew Smith", email="andrew@friarswood.net" },
]
license = {file = "LICENSE.md"}
description = "Raspberry Pi pico cryptography key and python driver"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: linux",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++ :: 20",
  "Programming Language :: C :: 17"
]
dependencies = [
  "pyusb>=1.3.1",
  "pwinput>=1.0.3",
  "typer>=0.25.1",
]

[project.scripts]
picobuild = "pico_crypto_key.build:app"

[dependency-groups]
dev = [
  "ecdsa>=0.19.2",
  "pytest>=9.0.0",
  "ruff>=0.15.0",
  "ty"
]

[project.optional-dependencies]
examples = [
  "fastapi[standard]>=0.136",
  "requests>=2.33.1",
  "pandas",
]

[project.urls]
"Homepage" = "https://github.com/virgesmith/pico-crypto-key"

[tool.pytest.ini_options]
testpaths = [
  "test"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "S", "SIM", "UP"]
ignore = ["S101", "S113", "S603", "S607"]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]

[tool.mypy]
exclude = [
  "mbedtls",
  "build-*",
]