[metadata]
name = pico-crypto-key
version = attr: pico_crypto_key.__version__
author = Andrew P Smith
author_email = andrew@friarswood.net
url = https://github.com/virgesmith/pico-crypto-key
description = Raspberry Pi pico cryptography key and python driver
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENCE.md
platform = linux
keywords =
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = pico_crypto_key
include_package_data = True
install_requires =
    pyserial
    toml
    typer
    pytest

[options.entry_points]
console_scripts =
    picobuild = pico_crypto_key.build:app

[aliases]
test=pytest

[flake8]
ignore = E111, E114, E121, E261
max-line-length = 160
per-file-ignores = __init__.py:F401, F403
exclude = .venv*, .git, __pycache__, .eggs, build

[mypy]

