[metadata]
name = pico-crypto-key
version = attr: pico_crypto_key.__version__
author = Andrew P Smith
author_email = andrew@friarswood.net
url = https://github.com/virgesmith/pico-crypto-key
description = Raspberry Pi pico cryptography key and python driver
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENCE.md
platform = linux
keywords =
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = pico_crypto_key
include_package_data = True
install_requires =
    pyserial
    toml
    typer
    pytest

[options.entry_points]
console_scripts =
    picobuild = pico_crypto_key.build:app

[aliases]
test=pytest

[mypy]

